location as relative path perfomance experiments runner